hymavathi/networkegress/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: bank-of-anthos
spec:
  podSelector:
    matchLabels:
      role: balancereader  # Replace with your pod's label
  policyTypes:
    - Egress
